Fix link wrapping

--- a/_sass/components/_base.scss
+++ b/_sass/components/_base.scss
@@ -34,9 +34,8 @@ a{
   font-family: inherit;
   text-decoration: none;
   color: inherit;
-  display: block;
+  display: inline;
   word-wrap: break-word;
-  white-space: pre-wrap;
 }
 
 h1, h2, h3, h4, h5, h6{
