--- a/_sass/sections/_page.scss
+++ b/_sass/sections/_page.scss
@@ -23,6 +23,8 @@
     margin: 0 auto;
   }
 
+  a{color: $color-scheme;}
+
   .blog-entries{
     width: 100%;
     position: relative;
